@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-29T08:17:01Z",
+  "timestamp" : "2023-09-29T16:17:28Z",
   "count_outdated" : 852,
   "uniques_outdated" : 502,
-  "count" : 887,
+  "count" : 888,
   "uniques" : 522,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
