@@ -1,5 +1,5 @@
 {
-  "count": 35,
+  "count": 36,
   "uniques": 2,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
